# DeVry-CEIS110

./: .flake8  .gitignore  CHANGELOG.md  Calculator.py  Enhanced-Final.py  LICENSE  OLD_noaa_weather_gui.py  README.md  RowlandHolden_enhanced CEIS101 Final.py  Turned-in-Final.py  noaa_weather_backend.py  noaa_weather_gui.py  requirements.txt  setup.cfg  weather_GUI.py
calculator/: README.md  calculator.py
docs/: index.md  usage.md
