[metadata]
name = weather-analyzer
version = 0.1.0
author = Rowland Holden
description = NOAA Weather Analyzer (GUI + Backend)
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
py_modules = noaa_weather_backend, weather_GUI
python_requires = >=3.8
install_requires =
    noaa-sdk
    matplotlib
    uszipcode
    requests
    customtkinter
    pillow

[options.entry_points]
console_scripts =
    weather-gui = weather_GUI:main
    noaa-weather = noaa_weather_backend:main
